Add recent projects list with UI and functionality enhancements in `StartupController`
- Introduce recent projects feature in `StartupController` using `ListView` for display and interaction.
- Create `RecentProjectCell` for handling individual item actions like opening and deleting projects.
- Update `startup.fxml` to include UI components for recent projects.
- Implement YAML-based configuration for better organization and serialization of recent projects data.
- Refactor `AppConfig` and `ConfigService` with utility methods for managing recent projects and app settings.